src/main/java/org/example/exceptions/InvalidInput/AccountNotFound.java
package org.example.exceptions.InvalidInput;

public class AccountNotFound extends InvalidInpException{
    public AccountNotFound(String s) {
        super(s);
    }
}
